--- a/Acme-Newspaper/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Newspaper/src/main/webapp/views/master-page/messages_es.properties
@@ -17,8 +17,9 @@ master.page.profile.action.2		= Acción 2
 master.page.profile.action.3		= Acción 3
 master.page.profile.display			= Información de perfil
 
+master.page.subscriptions                          = Subscripciones
 master.page.newspaperSubscriptions.mySubscriptions = Mis subscripciones a periódicos
-master.page.volumeSubscriptions.mySubscriptions = Mis subscripciones a volúmenes
+master.page.volumeSubscriptions.mySubscriptions    = Mis subscripciones a volúmenes
 
 master.page.register				= Registrarse
 master.page.login 					= Entrar
