Checking is admin aunthenticate in delete service

--- a/Acme-Newspaper/src/main/webapp/views/advertisement/messages.properties
+++ b/Acme-Newspaper/src/main/webapp/views/advertisement/messages.properties
@@ -58,6 +58,8 @@ message.error.advertisement.creditcard=Wrong date in credit card
 
 message.error.advertisement.notagent=There is not agent
 
+message.error.advertisement.notadmin=There is not administrator
+
 message.error.advertisement.badagent=Wrong agent
 
 advertisement.commit.error= Can not commit this operation
