--- a/Acme-Newspaper/src/main/webapp/views/advertisement/messages_es.properties
+++ b/Acme-Newspaper/src/main/webapp/views/advertisement/messages_es.properties
@@ -58,6 +58,8 @@ message.error.advertisement.creditcard=La fecha de la tarjeta de crédito no es v
 
 message.error.advertisement.notagent=No hay agente 
 
+message.error.advertisement.notadmin=No hay administrador
+
 message.error.advertisement.badagent=Agente incorrecto
 
 advertisement.commit.error= No se pudo realizar esa operación
