--- a/Acme-Newspaper/src/main/webapp/views/volumeSubscription/messages.properties
+++ b/Acme-Newspaper/src/main/webapp/views/volumeSubscription/messages.properties
@@ -18,7 +18,7 @@ volumeSubscription.volume.newspaper.title           = Title
 volumeSubscription.volume.newspaper.isPrivate       = Is it a newspaper under subscription?
 volumeSubscription.volume.newspaper.isPrivate.yes   = Yes
 volumeSubscription.volume.newspaper.isPrivate.no    = No
-volumeSubscription.volume.newspaper.showArticles    = Mostrar artículos
+volumeSubscription.volume.newspaper.showArticles    = Show articles
 
 volumeSubscription.creditCard.legend                = Credit card information
 volumeSubscription.creditCard.holderName            = Holder name
