Add/Delete newspapers to volumes restrictions fixed

--- a/Acme-Newspaper/src/main/webapp/views/volume/messages.properties
+++ b/Acme-Newspaper/src/main/webapp/views/volume/messages.properties
@@ -15,7 +15,7 @@ volume.description					= Description
 volume.year							= Year
 volume.newspapers					= Newspapers
 volume.newspapersButton				= Show newspapers
-volume.noNewspapers					= No newspapers in this volumen
+volume.noNewspapers					= Not available
 
 volume.addNewspapers				= Add newspapers to a volume
 volume.deleteNewspapers				= Delete newspapers to a volume
