--- a/Acme-Newspaper/src/main/webapp/views/volume/messages_es.properties
+++ b/Acme-Newspaper/src/main/webapp/views/volume/messages_es.properties
@@ -13,7 +13,7 @@ volume.description					= Descripción
 volume.year							= Año
 volume.newspapers					= Periódicos
 volume.newspapersButton				= Mostrar periódicos
-volume.noNewspapers					= No hay periódicos en este volumen
+volume.noNewspapers					= No disponible
 volume.save							= Guardar
 volume.cancel						= Cancelar
 volume.newspapers					= Periódicos
