--- a/Acme-Newspaper/src/main/webapp/views/article/messages.properties
+++ b/Acme-Newspaper/src/main/webapp/views/article/messages.properties
@@ -42,4 +42,4 @@ article.KeyWord.filter = Search
 article.KeyWord = Keyword
 
 article.advertisement =Advertisement
-article.advertisement.noBannerUrl = There does not exist advertisement
+article.advertisement.noBannerUrl = No advertisement to show
