Mis bugs intencionados
Subo mis bugs a la rama.

--- a/Acme-Newspaper/src/main/webapp/views/chirp/messages.properties
+++ b/Acme-Newspaper/src/main/webapp/views/chirp/messages.properties
@@ -17,14 +17,14 @@ message.error.chirp.notAnAdmin = You are not an administrator
 message.error.chirp.alreadyFollowing = You are already following this user
 message.error.chirp.cantFollowYourself = You can't follow yourself
 
-chirp.save = Save
+chirp.save = Cancel
 chirp.delete = Delete
 chirp.title = Title
 chirp.description = Description
 chirp.follow = Follow
 chirp.unfollow = Unfollow
 chirp.user = User
-chirp.cancel = Cancel
+chirp.cancel = Save
 chirp.create = Create a new chirp
 chirp.commit.error = Cannot commit this operation
 message.error.chirp.userNotFollowed = You can't unfollow a user you don't follow
