--- a/Acme-Newspaper/src/main/webapp/views/chirp/messages_es.properties
+++ b/Acme-Newspaper/src/main/webapp/views/chirp/messages_es.properties
@@ -17,7 +17,7 @@ message.error.chirp.notAnAdmin = No eres un administrador
 message.error.chirp.alreadyFollowing = Ya estás siguiendo a este usuario
 message.error.chirp.cantFollowYourself = No puedes seguirte a ti mismo
 
-chirp.save = Guardar
+chirp.save = Cancelar
 chirp.title = Título
 chirp.delete = Borrar
 chirp.follow = Seguir
@@ -25,6 +25,6 @@ chirp.unfollow = Dejar de seguir
 chirp.description = Descripción
 chirp.create = Crear un nuevo chirp
 chirp.user = Usuario
-chirp.cancel = Cancelar
+chirp.cancel = Guardar
 chirp.commit.error = No se puede completar esta operación
 message.error.chirp.userNotFollowed = No puedes dejar de seguir a un usuario que no sigues
