Search articles fixed
Now, it appears in newspaper/list

--- a/Acme-Newspaper/src/main/webapp/views/article/messages.properties
+++ b/Acme-Newspaper/src/main/webapp/views/article/messages.properties
@@ -23,7 +23,7 @@ article.isDraft.no          = No
 
 article.notEditable			= Not editable
 article.search				= Search
-article.keyword				= Keyword
+article.keyword				= Search article
 article.delete				= Delete article
 article.noPictures			= No pictures to show
 article.edit				= Edit
@@ -39,7 +39,7 @@ article.follow-up.cantShowFollowUps = No available
 article.follow-up.noFollowUps       = There are not follow-ups
 article.publicationMoment.dateNotYetEstablished = Date not yet established
 article.KeyWord.filter = Search
-article.KeyWord = Keyword
+article.KeyWord = Search article
 
 article.advertisement =Advertisement
 article.advertisement.noBannerUrl = No advertisement to show
