--- a/Acme-Newspaper/src/main/webapp/views/article/messages_es.properties
+++ b/Acme-Newspaper/src/main/webapp/views/article/messages_es.properties
@@ -23,7 +23,7 @@ article.isDraft.no          = No
 
 article.notEditable			= No es editable
 article.search				= Buscar
-article.keyword				= Palabra clave
+article.keyword				= Búsqueda de articulos
 article.delete				= Eliminar artículo
 article.noPictures			= No hay imágenes que mostrar
 article.edit				= Editar
@@ -39,7 +39,7 @@ article.follow-up.cantShowFollowUps = No disponible
 article.follow-up.noFollowUps       = No hay seguimientos
 article.publicationMoment.dateNotYetEstablished = Fecha no establecida
 article.KeyWord.filter = Buscar
-article.KeyWord = Palabra clave
+article.KeyWord = Búsqueda de artículos
 
 article.advertisement =Anuncio
 article.advertisement.noBannerUrl = No hay anuncios
