--- a/Acme-Newspaper/src/main/webapp/views/newspaper/messages.properties
+++ b/Acme-Newspaper/src/main/webapp/views/newspaper/messages.properties
@@ -6,7 +6,7 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-newspaper.keyWord						= Keyword
+newspaper.keyWord						= Search newspapers
 newspaper.KeyWord.filter				= Search
 
 newspaper.title							= Title
