--- a/Acme-Newspaper/src/main/webapp/views/newspaper/messages_es.properties
+++ b/Acme-Newspaper/src/main/webapp/views/newspaper/messages_es.properties
@@ -6,7 +6,7 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-newspaper.keyWord						= Palabra clave
+newspaper.keyWord						= Búsqueda de periódicos
 newspaper.KeyWord.filter				= Buscar
 
 newspaper.title							= Título
