David bugs 2(also added legend to newspaper multiselect)

--- a/Acme-Newspaper/src/main/webapp/views/volume/messages.properties
+++ b/Acme-Newspaper/src/main/webapp/views/volume/messages.properties
@@ -29,3 +29,4 @@ volume.edit							= Edit
 volume.newspapersSelectInfo			= Press ctrl for multiselect 
 volume.deleteLink					= Delete newspapers
 volume.addLink						= Add newspaper
+volume.selectNewspapers				= Press crtl to select more than one newspaper
