--- a/Acme-Newspaper/src/main/webapp/views/volume/messages_es.properties
+++ b/Acme-Newspaper/src/main/webapp/views/volume/messages_es.properties
@@ -26,3 +26,4 @@ volume.commit.error					= No se pudo realizar la operación
 volume.newspapersSelectInfo			= Pulse ctrl para multiselección
 volume.deleteLink					= Borrar periódicos
 volume.addLink						= Añadir periódicos
+volume.selectNewspapers				= Pulse crtl para seleccionar más de un periódico
