--- a/Acme-Newspaper/src/main/webapp/views/administrator/messages.properties
+++ b/Acme-Newspaper/src/main/webapp/views/administrator/messages.properties
@@ -47,7 +47,7 @@ administrator.ratioOfUsersWhoHavePostedAbove75PerCentTheAvgNoOfChirpsPerUser	= T
 
 administrator.ratioOfPublicVsPrivateNewspapers	= The ratio of public versus private newspapers
 administrator.avgNoArticlesPerPrivateNewspapers	= The average number of articles per private newspapers
-administrator.avgNoArticlesPerPublicNewspapers	= The average number of articles per private newspapers
+administrator.avgNoArticlesPerPublicNewspapers	= The average number of articles per public newspapers
 administrator.ratioOfSubscribersPerPrivateNewspaperVsTotalNumberOfCustomers	= The ratio of subscribers per private newspaper versus the total number of customers
 administrator.avgRatioOfPrivateVsPublicNewspaperPerPublisher	= The average ratio of private versus public newspapers per publisher
 
