ArticleService and ArticleServiceForm redone

--- a/Acme-Newspaper/src/main/webapp/views/article/messages.properties
+++ b/Acme-Newspaper/src/main/webapp/views/article/messages.properties
@@ -43,3 +43,10 @@ article.KeyWord = Search article
 
 article.advertisement =Advertisement
 article.advertisement.noBannerUrl = No advertisement to show
+
+message.error.article.null								= The article cannot be null
+message.error.article.newspaper.publicationDate.null	= The newspaper cannot be published
+message.error.article.publicationDate.null				= The article cannot be published
+message.error.article.writer.owner						= Only the writer can edit the article
+message.error.article.delete.admin						= Only the admin can delete an article
+message.error.article.draft								= You cannot edit an article if it's not draft
