--- a/Acme-Newspaper/src/main/webapp/views/article/messages_es.properties
+++ b/Acme-Newspaper/src/main/webapp/views/article/messages_es.properties
@@ -43,3 +43,10 @@ article.KeyWord = Búsqueda de artículos
 
 article.advertisement =Anuncio
 article.advertisement.noBannerUrl = No hay anuncios
+
+message.error.article.null								= El artículo no puede ser nulo
+message.error.article.newspaper.publicationDate.null	= El periodico no puede estar publicado
+message.error.article.publicationDate.null				= The artículo no puede estar publicado
+message.error.article.writer.owner						= Solamente el escritor puede editar el artículo
+message.error.article.delete.admin						= Solamente el admin puede borrar un artículo
+message.error.article.draft								= No puedes editar un artículo definitivo
