Volume and VolumeForm redone

--- a/Acme-Newspaper/src/main/webapp/views/volume/messages.properties
+++ b/Acme-Newspaper/src/main/webapp/views/volume/messages.properties
@@ -26,3 +26,7 @@ volume.newspapersSelectInfo			= Press ctrl for multiselect
 volume.deleteLink					= Delete newspapers
 volume.addLink						= Add newspaper
 volume.selectNewspapers				= Press ctrl to select more than one newspaper
+
+message.error.volume.null							= The volume cannot be null
+message.error.volume.user.principal					= Only the creator can create or edit the volume
+message.error.volume.newspaper.publicationDate.null	= The newspapers cannot be published
