--- a/Acme-Newspaper/src/main/webapp/views/volume/messages_es.properties
+++ b/Acme-Newspaper/src/main/webapp/views/volume/messages_es.properties
@@ -26,3 +26,7 @@ volume.newspapersSelectInfo			= Pulse ctrl para multiselección
 volume.deleteLink					= Borrar periódicos
 volume.addLink						= Añadir periódicos
 volume.selectNewspapers				= Pulse ctrl para seleccionar más de un periódico
+
+message.error.volume.null							= El volumen no puede ser nulo
+message.error.volume.user.principal					= Solamente el creador puede crear o editar el volumen
+message.error.volume.newspaper.publicationDate.null	= Los periodicos no pueden estar publicados
