Check Folder POST hacking

--- a/Acme-Newspaper/src/main/webapp/views/folder/messages.properties
+++ b/Acme-Newspaper/src/main/webapp/views/folder/messages.properties
@@ -31,3 +31,4 @@ message.error.folder.name.repeated	= The folder name must not be repeated
 message.error.folder.principal.owner	= Only the owner can edit or delete a folder
 
 message.error.folderForm.null			= The folder cannot be null
+message.error.folderForm.parent.owner	= The parent folder must belong to the principal
