--- a/Acme-Newspaper/src/main/webapp/views/folder/messages_es.properties
+++ b/Acme-Newspaper/src/main/webapp/views/folder/messages_es.properties
@@ -31,3 +31,4 @@ message.error.folder.name.repeated	= El nombre de la carpeta no puede estar repe
 message.error.folder.principal.owner	= Solamente el propietario puede editar o borrar una carpeta
 
 message.error.folderForm.null		= La carpeta no puede ser nula
+message.error.folderForm.parent.owner	= La carpeta padre debe pertenecer al actor logueado
