--- a/Acme-Newspaper/src/main/webapp/views/follow-up/messages_es.properties
+++ b/Acme-Newspaper/src/main/webapp/views/follow-up/messages_es.properties
@@ -31,3 +31,4 @@ message.error.followUp.heDoesntWriteTheArticle           = No eres el propietari
 message.error.followUp.articleIsDraft                    = El artículo es un borrador
 message.error.followUp.theNewspaperHasntBeenPublishedYet = El periódico no ha sido publicado todavía
 message.error.followUp.publicationDateIsPast             = La fecha de publicación está en pasado
+message.error.followUp.user.owner						= Solamente el creador puede editar un seguimiento
