JUnit Volume Tests and some little fixes

--- a/Acme-Newspaper/src/main/webapp/views/volume/messages.properties
+++ b/Acme-Newspaper/src/main/webapp/views/volume/messages.properties
@@ -14,7 +14,7 @@ volume.newspapersButton				= Show newspapers
 volume.noNewspapers					= Not available
 
 volume.addNewspapers				= Add newspapers to a volume
-volume.deleteNewspapers				= Delete newspapers to a volume
+volume.deleteNewspapers				= Delete newspapers from a volume
 volume.notEditable					= Not editable
 volume.commit.error					= Cannot commit this operation
 volume.save							= Save
