Arreglo express de chirp
No se mostraba la fecha de publicación de los chirps al listarlos.

--- a/Acme-Newspaper/src/main/webapp/views/chirp/messages.properties
+++ b/Acme-Newspaper/src/main/webapp/views/chirp/messages.properties
@@ -17,6 +17,8 @@ message.error.chirp.notAnAdmin = You are not an administrator
 message.error.chirp.alreadyFollowing = You are already following this user
 message.error.chirp.cantFollowYourself = You can't follow yourself
 
+chirp.publicationMoment = Publication Moment
+chirp.publicationMoment.pattern = MM/dd/yyyy HH:mm
 chirp.save = Save
 chirp.delete = Delete
 chirp.title = Title
