--- a/Acme-Newspaper/src/main/webapp/views/chirp/messages_es.properties
+++ b/Acme-Newspaper/src/main/webapp/views/chirp/messages_es.properties
@@ -17,6 +17,8 @@ message.error.chirp.notAnAdmin = No eres un administrador
 message.error.chirp.alreadyFollowing = Ya estás siguiendo a este usuario
 message.error.chirp.cantFollowYourself = No puedes seguirte a ti mismo
 
+chirp.publicationMoment = Fecha de publicación
+chirp.publicationMoment.pattern = dd/MM/yyyy HH:mm
 chirp.save = Guardar
 chirp.title = Título
 chirp.delete = Borrar
